# feddit-sentiment-analysis

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  feedit_README.md  main.py  prometheus.yml  pyproject.toml
reddit_sentiment_analysis/: api.py  app.py  config.py  logs.py  metrics.py  models.py  services.py  utils.py
reddit_sentiment_analysis/services/: feddit_api.py  predict.py
tests/acceptance_tests/: smoke_test.py
tests/unit_test/: test_api.py
tests/unit_test/service/: test_predict.py
