[tool.poetry]
name = "reddit-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["matt <mattia.fantoni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
