[tool.poetry]
name = "reddit-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["matt <mattia.fantoni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
aiohttp = "^3.8.5"
openai = "^0.28.1"
pydantic-settings = "^2.0.3"
prometheus-fastapi-instrumentator = "^6.1.0"
boto3 = "^1.28.58"
python-json-logger = "^2.0.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
moto = {extras = ["comprehend"], version = "^4.2.5"}
pytest = "^7.4.2"
httpx = "^0.25.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
